--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,15 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
-
       - name: Force Failure
+        run: test -z $(go fmt ./...)
+      - name: staticcheck
         run: test -z $(go fmt ./...)
 
   tests:
