--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,4 @@ jobs:
       - name: Force Failure
         run: go test -cover ./...
       - name: Security
-        run: test -z $(gosec ./...)
+        run: gosec ./...
