--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,3 +33,6 @@ jobs:
 
       - name: "Submit build to Google"
         run: "gcloud builds submit --tag us-central1-docker.pkg.dev/notely-414812/notely-ar-repo/notely-master:latest ."
+
+      - name: Deploy to Cloud Run
+        run: "gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-414812/notely-ar-repo/notely-master:latest --region us-central1 --allow-unauthenticated --project notely-414812 --max-instances=4"
